making the creation of elections manually work again

--- a/locales/es.json
+++ b/locales/es.json
@@ -371,7 +371,7 @@
         "theme": { "label": "Tema", "placeholder": "¿Cómo se verá la votación?" },
         "themes": { "default": "Por defecto", "podemos": "Podemos" },
         "questionOptionsSummary": "<strong>__num_answers__</strong> candidates. Voters select between <strong>__min__</strong> and <strong>__max__</strong> options (randomize: <strong>__random__</strong>) and there are <strong>__num_winners__</strong> winners. The tally method is <strong>__tally_method__</strong>.",
-        "censusSize": "__num__ people"
+        "censusSize": "__num__ personas"
 
     },
     "questions": {
