--- a/locales/es.json
+++ b/locales/es.json
@@ -268,6 +268,7 @@
         "login": "Acceso",
         "logout": "salir"
     },
+    "learnMore": "Learn more..",
     "foot": {
         "contact": "Contacto",
         "contactsupport": "Contacto de soporte",
@@ -390,12 +391,32 @@
         "reg": { "label": "Registro", "placeholder": "¿Cómo se genera el censo?" },
         "census": {"open": "Registro abierto", "close": "Registro cerrado"},
         "fields": {"label": "Campos extra", "placeholder": "Campos extra del votante"},
+        "emailOption": "email",
+        "passwordOption": "password",
+        "codeOption": "code",
+        "textOption": "text",
+        "tlfOption": "tlf",
+        "intOption": "int",
+        "boolOption": "bool",
+        "captchaOption": "captcha",
+        "textareaOption": "textarea",
         "configurationHeader": "Configuration",
+        "fieldTypeLabel": "Type",
+        "fieldMinLabel": "Min",
+        "fieldMaxLabel": "Max",
+        "fieldNameLabel": "Field name",
+        "fieldNamePlaceholder": "Example: Name and Surname",
+        "fieldHelpLabel": "Help text",
+        "fieldHelpPlaceholder": "Example: Insert both your name and surname",
+        "fieldRequiredAuthLabel": "Checked against census in authentication",
+        "extraFieldsHeader": "Extra fields",
+        "extraFieldsInfo": "Here you can define extra fields in the census in a versatile way. This allows you to do a range of things: adding extra checks against census in closed registration, registering new fields in open registration, etc.",
         "manage": "Administrar censo",
         "name": "Nombre",
         "required": "Obligatorio",
-        "add": "Añadir",
+        "add": "Añadir un nuevo campo",
         "manualAdd": "Añadir a mano",
+        "nonEditableField": "(Requerido por método de autenticación)",
         "massive1": "Fichero CSV, usa punto y coma para separar lo campos",
         "massive2": "un votante por línea, mantén el orden de los campos",
         "export": "Exportar"
