--- a/locales/en.json
+++ b/locales/en.json
@@ -334,6 +334,7 @@
         "file": "Select file"
     },
     "dashboard": {
+        "sendAuthCodes": "Send auth codes",
         "donow": "click to do now",
         "votes": "Votes",
         "census": "Census",
@@ -376,6 +377,9 @@
           "publishResultsHeader": "Publish election results",
           "publishResultsBody": "Currently only the election administrators have access to the calculated election results. When you publish the results, these will be made public for everyone to see.",
           "confirmPublishResultsButton": "Confirm and PUBLISH election results",
+          "sendAuthCodesHeader": "Send authentication codes",
+          "sendAuthCodesBody": "This action will send a message to all the registered electors in the census. Note that sending many messages can be considered as SPAM, so proceed with caution. Also, please review first the message that will be sent.",
+          "confirmSendAuthCodesButton": "SEND authentication codes to ALL census",
           "cancel": "Cancel"
         }
     },
