fixing extra fields and adding CSV on created elections

--- a/locales/en.json
+++ b/locales/en.json
@@ -389,7 +389,7 @@
         "description": { "label": "Description", "placeholder": "Description will be shown" },
         "share": { "label": "Share text", "placeholder": "Text to use for social sharing" },
         "layout": { "label": "Layout", "placeholder": "Specifies how the whole election will be displayed" },
-        "layouts": { "simple": "Simple", "yesno": "Yes/No" },
+        "layouts": { "simple": "Simple", "2questions-conditional": "Sí/No", "pcandidates-election": "Podemos Candidates" },
         "theme": { "label": "Theme", "placeholder": "How will the election look like?" },
         "themes": { "default": "Default", "podemos": "Podemos" },
         "questionOptionsSummary": "<strong>__num_answers__</strong> candidates. Voters select between <strong>__min__</strong> and <strong>__max__</strong> options (randomize: <strong>__random__</strong>) and there are <strong>__num_winners__</strong> winners. The tally method is <strong>__tally_method__</strong>.",
