--- a/locales/es.json
+++ b/locales/es.json
@@ -417,6 +417,13 @@
         "reg": { "label": "Registro", "placeholder": "¿Cómo se genera el censo?" },
         "census": {"open": "Registro abierto", "close": "Registro cerrado"},
         "fields": {"label": "Campos extra", "placeholder": "Campos extra del votante"},
+        "censusadd": "Voters added to the census",
+        "actionsDropdown": "Actions",
+        "exportCensusAction": "Export all census to CSV",
+        "removeCensusAction": "Remove __num__ selected people",
+        "sendAuthCodesAction": "Send auth codes to __num__ selected..",
+        "idColumnHeader": "Id",
+        "selectedColumnHeader": "Select",
         "emailOption": "email",
         "passwordOption": "password",
         "codeOption": "code",
