--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,4 @@
-All the source files in this repository, unless stated otherwise, are licensed
-with AGPL (see LICENSE) and their authors are:
-
-Copyright (C) 2014 Eduardo Robles Elvira <edulix AT agoravoting DOT com>
-Copyright (C) 2014 Javier Llorente Isidoro <javier AT agoravoting DOT com>
+Eduardo Robles Elvira <edulix AT agoravoting DOT com>
+Javier Llorente Isidoro <javier AT agoravoting DOT com>
+Daniel García Moreno <danigm AT agoravoting DOT com>
+Victor Ramírez de la Corte <victor AT agoravoting DOT com>
