--- a/locales/ca.json
+++ b/locales/ca.json
@@ -120,30 +120,22 @@
     "castOrCancelSubtitle": "El teu vot està xifrat, ja pots enviar-lo a la urna electrònica perquè sigui degudamet registrat. Alternativament, pots auditar que hagi estat xifrat correctament.",
     "reviewBallotHashText": "El localitzador del teu vot és: <strong>__ballotHash__</strong>",
     "auditTheBallot": "Audita la papereta",
-
-    "auditBallotTitle": "Auditar la papeleta",
-    "auditBallotSubtitle": "",
-    "auditBallotText": "<p>El localizador de tu voto es: <code>__ballotHash__</code></p><p><strong>La auditoría de la papeleta requiere ciertos conocimientos técnicos. Si no los tienes, puedes simplemente comenzar de nuevo el proceso de voto haciendo clic abajo</strong>.</p><p>Para verificar tu voto, necesitas:</p><ol><li>Copiar y guardar en un fichero la papeleta (clic para seleccionar):<br/><div class=\"code\" ng-click=\"selectDiv($event)\">__auditableBallot__</div></li><li>Seguir los pasos de <a href=\"https://github.com/agoravoting/agora-airgap/blob/master/README.md\" target=\"_blank\">este tutorial para verificar que la papeleta fue cifrada correctamente</a>.</li></ol><p>Por razones de seguridad, al auditar el voto, el ha de ser desechado. Para continuar el proceso de voto, debes comenzar el proceso de nuevo.</p>",
-    "auditStartAgain": "Comenzar el proceso de voto de nuevo",
-
-    "ballotLocatorTitle": "Encuentra tu papeleta",
+    "ballotLocatorTitle": "Troba la teva papereta",
     "ballotLocatorSubtitle": "Election: __title__",
-    "inputLocatorPlaceholder": "Introduce aquí el localizador",
-    "ballotLocatorPTitle": "Localizador de la papeleta",
-    "searchLocatorButton": "Encontrar papeleta",
-    "locatorDescription": "Cuando emites tu voto, te aparece el localizador de tu papeleta para que puedas seguirle el rastro sin desvelar el sentido del voto. Aquí puedes introducir ese localizador y ver que efectivamente esa papeleta cifrada fue emitida y registrada correctamente.",
-    "locatorFoundText": "¡Papeleta encontrada! Efectivamente, la papeleta con el localizador <strong>__locator__</strong> fue emitida y registrada correctamente. El texto de la papeleta cifrada es:",
-    "locatorSearchingStatus": "<span class=\"text-primary\">Buscando localizador..</span>",
-    "locatorFoundStatus": "<span class=\"text-success\">¡Localizador encontrado!</span>",
-    "locatorNotFoundStatus": "<span class=\"text-danger\">Localizador no encontrado</span>",
-    "locatorInfoText": "Ejemplo de localizador: 78a319dbd699c5d6ff08ca08990b395e593bcb8282a7660417a50d0ee470503f",
-
+    "inputLocatorPlaceholder": "Introdueix aquí el localitzador",
+    "ballotLocatorPTitle": "Localizador de la papereta",
+    "searchLocatorButton": "Troba la papereta",
+    "locatorDescription": "Quan emets el teu vot, t'apareix el localitzador de la teva papereta perquè puguis seguir-li el rastre sense desvetllar-ne el sentit del vot. Aquí pots introduir aquest localitzador i comprovar que efectivament aquesta papereta xifrada ha estat emesa i registrada correctament.",
+    "locatorFoundText": "¡Papereta trobada! Efectivament, la papereta amb el localitzador <strong>__locator__</strong> ha estat emesa i registrada correctament. El text de la papereta xifrada és:",
+    "locatorSearchingStatus": "<span class=\"text-primary\">Cercant localitzador..</span>",
+    "locatorFoundStatus": "<span class=\"text-success\">Localitzador trobat!</span>",
+    "locatorNotFoundStatus": "<span class=\"text-danger\">Localitzador no trobat</span>",
+    "locatorInfoText": "Exemple de localitzador: 78a319dbd699c5d6ff08ca08990b395e593bcb8282a7660417a50d0ee470503f",
     "thisisADemoNotification": "<span class=\"glyphicon glyphicon-info-sign\" aria-hidden=\"true\"></span> <strong>Warning!</strong> Demo voting booth, votes issued from this booth will not count.",
-    "successBallotHash": "¡Enhorabuena! Has emitido tu voto con <strong><a href=\"https://agoravoting.com\" target=\"_blank\">Agora Voting</a></strong>. El localizador de tu voto es:<br/><br/></h3><p> <strong>__ballotHash__</strong><br/><br/>Puedes usar tu localizador para <a href=\"__ballotLocatorUrl__\" target=\"_blank\">verificar que tu voto ha quedado registrado</a>. Mientras que la votación esté en curso, puedes votar de nuevo, sobreescribiendo e invalidando cualquier voto que hayas emitido anteriormente en esta votación.",
-    "relatedLinksText": "Para más información sobre la votación:",
-
-    "circleOptionExternalLink": "Ver detalles",
-    "voteInBlank": "Votar en Blanco"
+    "successBallotHash": "Enhorabona! Has emès el teu vot amb <strong><a href=\"https://agoravoting.com\" target=\"_blank\">Agora Voting</a></strong>. El localitzador del teu vot és:<br/><br/></h3><p> <strong>__ballotHash__</strong><br/><br/>Pots fer servir el localitzador per <a href=\"__ballotLocatorUrl__\" target=\"_blank\">verificar que el teu vot ha quedat registrat</a>. Mentre la votació estigui en curs, pots votar un altre cop, sobreescrivint i invalidant qualsevol vot que hagis emès anteriorment en aquesta votació.",
+    "relatedLinksText": "Per a més informació sobre la votació:",
+    "circleOptionExternalLink": "Mostra'n els detalls",
+    "voteInBlank": "Vota en blanc"
   },
   "avElection": {
     "resultsLoadingText": "Cargando resultados",
