--- a/locales/en.json
+++ b/locales/en.json
@@ -83,7 +83,7 @@
     "statusEncryptingQuestion": "Encrypting answers to question __questionNum__, please wait (__percentage__% completed)",
     "statusVerifyingQuestion": "Verifying the encrypted answers to question __questionNum__, please wait (__percentage__% completed)",
     "sendingBallot": "Sending the ballot to the server, please wait (__percentage__% completed)",
-    "emptyAnswer": "<no answer>",
+    "emptyAnswer": "<blank vote>",
 
     "successTitle": "Vote cast successfully",
     "successSubheader": "Congratulations, you have correctly cast your ballot and it's now being kept in our electronic ballot box.",
