--- a/locales/ca.json
+++ b/locales/ca.json
@@ -78,7 +78,7 @@
     "reviewYourBallotText": "Abans d'emetre el teu vot, sisplau revisa el contingut de la teva papereta",
     "castTheBallot": "Envia el vot",
     "changeAnswerToQuestion": "canvia",
-    "emptyAnswer": "<sense resposta>",
+    "emptyAnswer": "<vot en blanc>",
 
     "statusExecutingSanityChecks": "Verificant que el navegador és capaç de codificar el vot, sisplau espera (__percentage__% completat)",
     "statusEncryptingQuestion": "Xifrant les respostes a la pregunta __questionNum__, sisplau espera (__percentage__% completat)",
@@ -131,7 +131,7 @@
     "locatorFoundStatus": "<span class=\"text-success\">Localitzador trobat!</span>",
     "locatorNotFoundStatus": "<span class=\"text-danger\">Localitzador no trobat</span>",
     "locatorInfoText": "Exemple de localitzador: 78a319dbd699c5d6ff08ca08990b395e593bcb8282a7660417a50d0ee470503f",
-    "thisisADemoNotification": "<span class=\"glyphicon glyphicon-info-sign\" aria-hidden=\"true\"></span> <strong>Warning!</strong> Demo voting booth, votes issued from this booth will not count.",
+    "thisisADemoNotification": "<span class=\"glyphicon glyphicon-info-sign\" aria-hidden=\"true\"></span> <strong>¡Atención!</strong> Cabina de votación de prueba, los votos emitidos aquí no cuentan.",
     "successBallotHash": "Enhorabona! Has emès el teu vot amb <strong><a href=\"https://agoravoting.com\" target=\"_blank\">Agora Voting</a></strong>. El localitzador del teu vot és:<br/><br/></h3><p> <strong>__ballotHash__</strong><br/><br/>Pots fer servir el localitzador per <a href=\"__ballotLocatorUrl__\" target=\"_blank\">verificar que el teu vot ha quedat registrat</a>. Mentre la votació estigui en curs, pots votar un altre cop, sobreescrivint i invalidant qualsevol vot que hagis emès anteriorment en aquesta votació.",
     "relatedLinksText": "Per a més informació sobre la votació:",
     "circleOptionExternalLink": "Mostra'n els detalls",
