fixing tlf field

--- a/locales/en.json
+++ b/locales/en.json
@@ -226,7 +226,9 @@
     "invalidRegisterData": "No ha sido posible registrarte con los datos aportados. Por favor, revísalos, o ponte en contacto con los administradores de la votación,",
     "logout": "Logout",
     "emailLabel": "Email",
-    "telLabel": "Phone",
+    "telLabel": " Mobile telephone number",
+    "telInvalid": " Invalid telephone number. Example of valid number: +34666666666",
+    "telHelp": " Example: +34666666666 (only numbers, with no spaces or hyphens)",
     "codeLabel": "Authentication Code",
     "emailPlaceholder": "john@example.com",
     "passwordLabel": "Password",
