--- a/locales/es.json
+++ b/locales/es.json
@@ -229,7 +229,9 @@
     "logout": "Salir",
     "codeLabel": "Código de Autenticación",
     "emailLabel": "Correo electrónico",
-    "telLabel": "Teléfono",
+    "telLabel": " Número de teléfono móvil",
+    "telInvalid": " Número de teléfono inválido. Ejemplo de número válido: +34666666666",
+    "telHelp": " Ejemplo: +34666666666 (sólo números, sin espacios ni guiones)",
     "emailPlaceholder": "fulanito@ejemplo.com",
     "passwordLabel": "Contraseña",
     "passwordPlaceholder": "contraseña",
