--- a/locales/es.json
+++ b/locales/es.json
@@ -230,8 +230,8 @@
     "codeLabel": "Código de Autenticación",
     "emailLabel": "Correo electrónico",
     "telLabel": " Número de teléfono móvil",
-    "telInvalid": " Número de teléfono inválido. Ejemplo de número válido: +34666666666",
-    "telHelp": " Ejemplo: +34666666666 (sólo números, sin espacios ni guiones)",
+    "telInvalid": " Número de teléfono inválido. Ejemplo de número válido: 666666666",
+    "telHelp": " Ejemplo: +34666666666 (sólo números, sin espacios ni guiones. Para números extranjeros, usa un prefijo tipo +34)",
     "emailPlaceholder": "fulanito@ejemplo.com",
     "passwordLabel": "Contraseña",
     "passwordPlaceholder": "contraseña",
