i18n improvement on login

--- a/locales/en.json
+++ b/locales/en.json
@@ -272,7 +272,7 @@
         "features": "Features",
         "help": "Help",
         "freesignup": "Free sign up",
-        "login": "login",
+        "login": "Enter",
         "logout": "logout"
     },
     "learnMore": "Learn more..",
