--- a/locales/es.json
+++ b/locales/es.json
@@ -274,7 +274,7 @@
         "features": "Funcionalidad",
         "help": "Ayuda",
         "freesignup": "Registro gratuito",
-        "login": "Acceso",
+        "login": "Entrar",
         "logout": "salir"
     },
     "learnMore": "Learn more..",
