fix i18n in admin

--- a/locales/es.json
+++ b/locales/es.json
@@ -320,7 +320,7 @@
         "questions": "Preguntas",
         "censusConfig": "Configuración Censal",
         "census": "Datos censales",
-        "auth": "Autorización",
+        "auth": "Autenticación",
         "tally": "Recuento",
         "create": "Crear Votación",
         "myAccount": "Mi cuenta",
