--- a/locales/es.json
+++ b/locales/es.json
@@ -474,9 +474,10 @@
         "sms": "Mensaje SMS",
         "smstemp": "Plantilla usada en el SMS a enviar al usuario. Usa %(code)s para insertar el código SMS y %(url)s para insertar el enlace de votación",
         "smsdef": "Este es tu código de votación %(code)s",
-        "email": "Mensaje por correo elelectrónico",
-        "emailsub": "Ya puedes votar con Agora Voting",
+        "email": "Cuerpo del mensaje",
+        "emailsub": "Asunto del email",
         "emailtemp": "Plantilla usada en el correo para enviar a los usuarios. Usa %(code)s para añadir el código de acceso y %(url)s para insertar el enlace de votación",
+        "emailsubdef": "Ya puedes votar con Agora Voting",
         "emaildef": "Vota en %(url)s con el codigo %(code)s"
     },
     "create": {
